--- a/info.html
+++ b/info.html
@@ -80,7 +80,7 @@
                                 edellä mainituista tekniikoista.
                             </p>
                             <p>Haluaisin kuitenkin oppia lisää oikeassa työympäristössä.</p>
-                            <p>Jos kiinnostuit otathan rohkeasti yhteyttä! Yhteystietoni löytyvät <a href="/contact.html">täältä</a>.</p>
+                            <p>Jos kiinnostuit otathan rohkeasti yhteyttä! Yhteystietoni löytyvät <a href="./contact.html">täältä</a>.</p>
                         </div>
                     </div>
                 </div>
