--- a/minusta.html
+++ b/minusta.html
@@ -29,9 +29,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,77.8,100..900;1,77.8,100..900&display=swap" rel="stylesheet">
 </head>
-
     <body class="background-color">
-        <div class="container"></div>
+        <main>
             <nav class="navbar navbar-expand-md">
                 <div class="container">
                     <span class="navbar-brand">
@@ -43,42 +42,38 @@
                     <div class="collapse navbar-collapse justify-content-end" id="mynavbar">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a href="./index.html" class="nav-link text-end roboto">Etusivu</a>
+                                <a href="./index.html" class="nav-link text-end roboto">Main</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./info.html" class="nav-link text-end roboto">Osaaminen</a>
+                                <a href="./info.html" class="nav-link text-end roboto">Skills</a>
+                            </li>
+                            <li class="nav-item">
+                                <a href="./projects.html" class="nav-link text-end roboto">Projects</a>
                             </li>
                             <li class="nav-item">
                                 <a href="./minusta.html" class="nav-link text-end roboto">Henry</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./contact.html" class="nav-link text-end roboto">Yhteystiedot</a>
+                                <a href="./contact.html" class="nav-link text-end roboto">Contact</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
             <section class="container">
-                <h2 class="mt-3 mb-5 text-center">Henry töissä ja vapaalla...</h2>
+                <h2 class="mt-3 mb-5 text-center">Henry at work and off duty...</h2>
                 <div class="row container-sm">
-                   <div class="col-sm-7 fs-4 text-center order-2 order-sm-1">
-                        <p>Minulle ominaisin <strong>työskentelytapa</strong> on kun pääsen luomaan
-                            ja kehittämään projektia yhdessä osana tiimiä. Nautin kun pääsen 
-                            keskittymään omaan osa-alueeseeni osana isompaa kokonaisuutta.
-                        </p>
-                        <p>Minulle sopii joustavasti työskennellä sekä <strong>lähi- että etätyönä</strong>.</p>
-                        <p><strong>Vapaa-ajalla</strong> tykkään viettää aikaa perheeni kanssa sekä 
-                            liikkua aktiivisesti niin salilla, luonnossa kuin 
-                            joukkueurheilun muodossa.
-                        </p>
-                   </div> 
-                   <div class="col-sm-5 container text-center mb-4 order-1 order-sm-2">
+                    <div class="col-sm-7 fs-4 text-center order-2 order-sm-1">
+                        <p>My most natural <strong>way of working</strong> is when I get to create and develop a project collaboratively as part of a team. I feel most productive when I can focus on my own area of responsibility within a larger whole.</p>
+                        <p>I’m flexible and comfortable working both <strong>on-site and remotely</strong>.</p>
+                        <p><strong>In my free time</strong>, I enjoy spending time with my family and staying active — whether at the gym, outdoors, or through team sports.</p>
+                    </div>
+                    <div class="col-sm-5 container text-center mb-4 order-1 order-sm-2">
                     <img src="./img/maisema.jpg" alt="maisema" id="spesific-image">
                 </div>
                 </div>
-
             </section>
-        </div>
+        </main>
         <footer class="footer-name">
             <p>Henry Djupsjöbacka - Portfolio 2025</p>
         </footer>
