--- a/projects.html
+++ b/projects.html
@@ -69,7 +69,10 @@
                     <div class="col-sm">
                         <p class="fs-5">Here are a few school projects I have developed:</p>
                         <ul>
-                            <li>Flea market app:</li>
+                            <li> <a href="https://heksidee.github.io/flea-market-app/" target="_blank" rel="noopener noreferrer">
+                                    Flea market app
+                            </a>
+                            </li>
                             <li> <a href="https://heksidee.github.io/hedelm-peli/" target="_blank" rel="noopener noreferrer">
                                     Slot machine
                                 </a>
@@ -81,10 +84,7 @@
                             </li>
                         </ul>
                         <div class="fs-5">
-                            <p>In addition, I have practiced full-stack development in a <strong>Node.js</strong> environment and built small-scale server-side projects.</p>
-                            <p>I am curious and eager to deepen my knowledge of these technologies. The Junior Web Developer position you’ve advertised seems like an ideal opportunity to do just that.</p>
-                            <p>I am comfortable working in both Finnish and English.</p>
-                            <p>If you're interested, feel free to <a href="./contact.html">get in touch!</a></p>
+                            <p>These are pure frontend projects and currently im working on fullstack development project.</p>
                         </div>
                     </div>
                 </div>
