--- a/info.html
+++ b/info.html
@@ -61,7 +61,7 @@
             </div>
         </nav>
         <section class="container">
-            <h1 class="text-center mt-3 mb-4">Henry Djupsjöbacka</h1>
+            <h1 class="text-center mt-3 mb-4">Skills</h1>
                 <div class="row container-sm">
                     <div class="col-sm container text-center mb-4">
                         <img src="./img/harmaa.jpg" alt="harmaa" id="spesific-image">
@@ -73,6 +73,7 @@
                             <li>CSS</li>
                             <li>JavaScript</li>
                             <li>React</li>
+                            <li>Playwright testing</li>
                             <li>Bootstrap</li>
                             <li>Python</li>
                             <li>GitHub</li>
