--- a/projects.html
+++ b/projects.html
@@ -69,23 +69,60 @@
                     <div class="col-sm">
                         <p class="fs-5">Here are a few school projects I have developed:</p>
                         <ul>
-                            <li> <a href="https://heksidee.github.io/flea-market-app/" target="_blank" rel="noopener noreferrer">
+                            <li> 
+                                <a href="https://heksidee.github.io/shoot-game/" target="_blank" rel="noopener noreferrer">
+                                    Shoot game
+                                </a>
+                                -
+                                <a href="https://github.com/heksidee/shoot-game.git" target="_blank" rel="noopener noreferrer">
+                                    source code
+                                </a>
+                            </li>
+                            <li> 
+                                <a href="https://heksidee.github.io/flea-market-app/" target="_blank" rel="noopener noreferrer">
                                     Flea market app
-                            </a>
+                                </a>
+                                -
+                                <a href="https://github.com/heksidee/flea-market-app.git" target="_blank" rel="noopener noreferrer">
+                                    source code
+                                </a>
                             </li>
                             <li> <a href="https://heksidee.github.io/hedelm-peli/" target="_blank" rel="noopener noreferrer">
                                     Slot machine
+                                </a>
+                                -
+                                <a href="https://github.com/heksidee/hedelm-peli.git" target="_blank" rel="noopener noreferrer">
+                                    source code
                                 </a>
                             </li>
                             <li> 
                                 <a href="https://heksidee.github.io/sikanoppapeli/" target="_blank" rel="noopener noreferrer">
                                     Dice game
                                 </a>
+                                -
+                                <a href="https://github.com/heksidee/sikanoppapeli.git" target="_blank" rel="noopener noreferrer">
+                                    source code
+                                </a>
                             </li>
                         </ul>
                         <div class="fs-5">
-                            <p>These are pure frontend projects and currently im working on fullstack development project.</p>
+                            <p>These projects focus exclusively on front-end development.</p>
+                            <p>Alongside these, I’m actively developing full-stack projects that combine both front-end and back-end technologies.</p>
+                            <p>These projects haven’t been published yet, but the source code is available above.</p>
                         </div>
+                        <ul>
+                            <li>Bloglist
+                                <a href="https://github.com/heksidee/bloglist-frontend.git" target="_blank" rel="noopener noreferrer">
+                                    frontend
+                                </a>
+                                <a href="https://github.com/heksidee/blogbackend.git" target="_blank" rel="noopener noreferrer">
+                                    backend
+                                </a>
+                                <a href="https://github.com/heksidee/bloglist-playwright.git" target="_blank" rel="noopener noreferrer">
+                                    playwright
+                                </a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
         </section>
