--- a/projects.html
+++ b/projects.html
@@ -70,35 +70,44 @@
                         <p class="fs-5">Here are a few school projects I have developed:</p>
                         <ul>
                             <li> 
-                                <a href="https://heksidee.github.io/shoot-game/" target="_blank" rel="noopener noreferrer">
-                                    Shoot game
-                                </a>
+                                <strong>
+                                    <a href="https://heksidee.github.io/shoot-game/" target="_blank" rel="noopener noreferrer">
+                                        Shoot game
+                                    </a>
+                                </strong>
                                 -
                                 <a href="https://github.com/heksidee/shoot-game.git" target="_blank" rel="noopener noreferrer">
                                     source code
                                 </a>
                             </li>
                             <li> 
-                                <a href="https://heksidee.github.io/flea-market-app/" target="_blank" rel="noopener noreferrer">
-                                    Flea market app
-                                </a>
+                                <strong>
+                                    <a href="https://heksidee.github.io/flea-market-app/" target="_blank" rel="noopener noreferrer">
+                                        Flea market app
+                                    </a>
+                                </strong>
                                 -
                                 <a href="https://github.com/heksidee/flea-market-app.git" target="_blank" rel="noopener noreferrer">
                                     source code
                                 </a>
                             </li>
-                            <li> <a href="https://heksidee.github.io/hedelm-peli/" target="_blank" rel="noopener noreferrer">
-                                    Slot machine
-                                </a>
-                                -
+                            <li> 
+                                <strong>
+                                    <a href="https://heksidee.github.io/hedelm-peli/" target="_blank" rel="noopener noreferrer">
+                                        Slot machine
+                                    </a>
+                                    -
+                                </strong>
                                 <a href="https://github.com/heksidee/hedelm-peli.git" target="_blank" rel="noopener noreferrer">
                                     source code
                                 </a>
                             </li>
                             <li> 
-                                <a href="https://heksidee.github.io/sikanoppapeli/" target="_blank" rel="noopener noreferrer">
-                                    Dice game
-                                </a>
+                                <strong>
+                                    <a href="https://heksidee.github.io/sikanoppapeli/" target="_blank" rel="noopener noreferrer">
+                                        Dice game
+                                    </a>
+                                </strong>
                                 -
                                 <a href="https://github.com/heksidee/sikanoppapeli.git" target="_blank" rel="noopener noreferrer">
                                     source code
