--- a/info.html
+++ b/info.html
@@ -81,7 +81,7 @@
                         </ul>
                         <div class="fs-5">
                             <p>In addition, I have practiced full-stack development in a <strong>Node.js</strong> environment and built small-scale server-side projects.</p>
-                            <p>I am curious and eager to deepen my knowledge of these technologies. The Junior Web Developer position you’ve advertised seems like an ideal opportunity to do just that.</p>
+                            <p>I am curious and eager to deepen my knowledge of these technologies.</p>
                             <p>I am comfortable working in both Finnish and English.</p>
                             <p>If you're interested, feel free to <a href="./contact.html">get in touch!</a></p>
                         </div>
