--- a/projects.html
+++ b/projects.html
@@ -1,144 +1,239 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Henry Djupsjöbacka</title>
     <style>
-        #spesific-image {
-            width: 70%;
-            max-height: auto;
-            border-radius: 20%;
-            
+      #spesific-image {
+        width: 70%;
+        max-height: auto;
+        border-radius: 20%;
+      }
+      @media (max-width: 768px) {
+        p {
+          font-size: 19px;
         }
-        @media (max-width: 768px) {
-            p  {
-                font-size: 19px;
-            }
+      }
+      @media (max-width: 576px) {
+        p {
+          font-size: 17px;
         }
-        @media (max-width: 576px) {
-            p  {
-                font-size: 17px;
-            }
-        }
+      }
     </style>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="tyylit.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,77.8,100..900;1,77.8,100..900&display=swap" rel="stylesheet">
-</head>
-<body class="background-color">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="tyylit.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wdth,wght@0,77.8,100..900;1,77.8,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="background-color">
     <main>
-        <nav class="navbar navbar-expand-md">
-            <div class="container">
-                <span class="navbar-brand">
-                    <img src="./img/taivas.jpg" alt="be-happy" height="60px" id="nav-image">
-                </span>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar" aria-controls="mynavbar" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse justify-content-end" id="mynavbar">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a href="./index.html" class="nav-link text-end">Main</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="./info.html" class="nav-link text-end">Skills</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="./projects.html" class="nav-link text-end roboto">Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="./minusta.html" class="nav-link text-end roboto">Henry</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="./contact.html" class="nav-link text-end">Contact</a>
-                        </li>
-                    </ul>
-                </div>
+      <nav class="navbar navbar-expand-md">
+        <div class="container">
+          <span class="navbar-brand">
+            <img
+              src="./img/taivas.jpg"
+              alt="be-happy"
+              height="60px"
+              id="nav-image"
+            />
+          </span>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#mynavbar"
+            aria-controls="mynavbar"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div
+            class="collapse navbar-collapse justify-content-end"
+            id="mynavbar"
+          >
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a href="./index.html" class="nav-link text-end">Main</a>
+              </li>
+              <li class="nav-item">
+                <a href="./info.html" class="nav-link text-end">Skills</a>
+              </li>
+              <li class="nav-item">
+                <a href="./projects.html" class="nav-link text-end roboto"
+                  >Projects</a
+                >
+              </li>
+              <li class="nav-item">
+                <a href="./minusta.html" class="nav-link text-end roboto"
+                  >Henry</a
+                >
+              </li>
+              <li class="nav-item">
+                <a href="./contact.html" class="nav-link text-end">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <section class="container">
+        <h1 class="text-center mt-3 mb-4">Projects</h1>
+        <div class="row container-sm">
+          <div class="col-sm container text-center mb-4">
+            <img src="./img/harmaa.jpg" alt="harmaa" id="spesific-image" />
+          </div>
+          <div class="col-sm">
+            <p class="fs-5">Here are a few school projects I have developed:</p>
+            <ul>
+              <li>
+                <a
+                  href="https://github.com/heksidee/repositoryapp.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >RepositoryApp frontend sourcecode
+                </a>
+                - React Native project
+              </li>
+              <li>
+                <a
+                  href="https://github.com/heksidee/repositoryapi.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >RepositoryApp backend sourcecode
+                </a>
+                - React Native project
+              </li>
+              <li>
+                Bloglist
+                <a
+                  href="https://github.com/heksidee/bloglist-frontend.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  frontend
+                </a>
+                <a
+                  href="https://github.com/heksidee/blogbackend.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  backend
+                </a>
+                <a
+                  href="https://github.com/heksidee/bloglist-playwright.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  playwright
+                </a>
+                - React project
+              </li>
+              <li>
+                <a
+                  href="https://heksidee.github.io/flea-market-app/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  Flea market app
+                </a>
+
+                -
+                <a
+                  href="https://github.com/heksidee/flea-market-app.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  source code
+                </a>
+                - JavaScript project
+              <li>
+                <a
+                  href="https://heksidee.github.io/shoot-game/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  Shoot game
+                </a>
+
+                -
+                <a
+                  href="https://github.com/heksidee/shoot-game.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  source code
+                </a>
+              </li>
+              </li>
+              <li>
+                <a
+                  href="https://heksidee.github.io/hedelm-peli/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  Slot machine
+                </a>
+                -
+
+                <a
+                  href="https://github.com/heksidee/hedelm-peli.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  source code
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://heksidee.github.io/sikanoppapeli/"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  Dice game
+                </a>
+
+                -
+                <a
+                  href="https://github.com/heksidee/sikanoppapeli.git"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                >
+                  source code
+                </a>
+              </li>
+            </ul>
+            <div class="fs-5">
+              <p>
+                These projects focus mainly on front-end development but there
+                is also fullstack technologies included.
+              </p>
+              <p>
+                In addition to these, I have projects that are still in
+                development.
+              </p>
             </div>
-        </nav>
-        <section class="container">
-            <h1 class="text-center mt-3 mb-4">Projects</h1>
-                <div class="row container-sm">
-                    <div class="col-sm container text-center mb-4">
-                        <img src="./img/harmaa.jpg" alt="harmaa" id="spesific-image">
-                    </div>
-                    <div class="col-sm">
-                        <p class="fs-5">Here are a few school projects I have developed:</p>
-                        <ul>
-                            <li> 
-                                <strong>
-                                    <a href="https://heksidee.github.io/shoot-game/" target="_blank" rel="noopener noreferrer">
-                                        Shoot game
-                                    </a>
-                                </strong>
-                                -
-                                <a href="https://github.com/heksidee/shoot-game.git" target="_blank" rel="noopener noreferrer">
-                                    source code
-                                </a>
-                            </li>
-                            <li> 
-                                <strong>
-                                    <a href="https://heksidee.github.io/flea-market-app/" target="_blank" rel="noopener noreferrer">
-                                        Flea market app
-                                    </a>
-                                </strong>
-                                -
-                                <a href="https://github.com/heksidee/flea-market-app.git" target="_blank" rel="noopener noreferrer">
-                                    source code
-                                </a>
-                            </li>
-                            <li> 
-                                <strong>
-                                    <a href="https://heksidee.github.io/hedelm-peli/" target="_blank" rel="noopener noreferrer">
-                                        Slot machine
-                                    </a>
-                                    -
-                                </strong>
-                                <a href="https://github.com/heksidee/hedelm-peli.git" target="_blank" rel="noopener noreferrer">
-                                    source code
-                                </a>
-                            </li>
-                            <li> 
-                                <strong>
-                                    <a href="https://heksidee.github.io/sikanoppapeli/" target="_blank" rel="noopener noreferrer">
-                                        Dice game
-                                    </a>
-                                </strong>
-                                -
-                                <a href="https://github.com/heksidee/sikanoppapeli.git" target="_blank" rel="noopener noreferrer">
-                                    source code
-                                </a>
-                            </li>
-                        </ul>
-                        <div class="fs-5">
-                            <p>These projects focus exclusively on front-end development.</p>
-                            <p>Alongside these, I’m actively developing full-stack projects that combine both front-end and back-end technologies.</p>
-                            <p>These projects haven’t been published yet, but the source code is available above.</p>
-                        </div>
-                        <ul>
-                            <li>Bloglist
-                                <a href="https://github.com/heksidee/bloglist-frontend.git" target="_blank" rel="noopener noreferrer">
-                                    frontend
-                                </a>
-                                <a href="https://github.com/heksidee/blogbackend.git" target="_blank" rel="noopener noreferrer">
-                                    backend
-                                </a>
-                                <a href="https://github.com/heksidee/bloglist-playwright.git" target="_blank" rel="noopener noreferrer">
-                                    playwright
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-        </section>
+            <ul></ul>
+          </div>
+        </div>
+      </section>
     </main>
     <footer class="footer-name">
-        <p>Henry Djupsjöbacka - Portfolio 2025</p>
+      <p>Henry Djupsjöbacka - Portfolio 2025</p>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
